--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,13 @@
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
-
+    
+    <properties>
+        <sonar.projectKey>granmaur_sq-com_example_java-maven-travis</sonar.projectKey>
+        <sonar.organization>granmaur</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+    </properties>
+    
     <dependencies>
         <dependency>
           <groupId>commons-lang</groupId>
